tests/NormalTests/paczka1/fuzzy1/40889869.err
Error in line 1: ckVU A197 59,7
Error in line 6: KdAA S679 56,3
Error in line 3: TJnj S679 53,9
Error in line 17: TJnj A197 95,1
Error in line 19: FblEYg A197 10,5
Error in line 23: FblEYg A990 74,6
Error in line 28: FblEYg S679 90,3
